slider top spacing fixed

--- a/resources/assets/scss/layout/_biography.scss
+++ b/resources/assets/scss/layout/_biography.scss
@@ -7,6 +7,14 @@
 	background: #000;
 	padding: 4rem 0 2rem 0;
 	overflow-x: hidden; 
+
+	@media screen and ( $size: $iphone6puls) {
+		padding: 0rem 0 3rem 0;
+    }
+    @media screen and ( $size: $nexusTab) {
+		padding: 0rem 0 3rem 0;
+    }
+
 	
 }
 
